CSS alignment issues/bugs
..fixed a few..

--- a/css/main.css
+++ b/css/main.css
@@ -815,8 +815,6 @@ button {
   height: 3.4375em;
   fill: #fff;
   animation: turn 1.1s .2s ease-out forwards; }
-  #twitter:hover, #facebook:hover, #google:hover, #linkedIn:hover, #pinterest:hover, #youtube:hover {
-    fill: #878787; }
   @media (min-width: 1024px) {
     #twitter, #facebook, #google, #linkedIn, #pinterest, #youtube {
       height: 4.375em; } }
@@ -917,7 +915,7 @@ tr {
   width: 90%;
   margin-left: 5%;
   /*  height: 300px;*/
-  border: 1px solid #878787; }
+  border-right: 1px solid #878787; }
   @media (min-width: 768px) {
     #messageUser {
       margin-left: 0%; } }
@@ -1000,11 +998,18 @@ textarea:focus, #timezone:focus {
 
 #settingsFieldset1 > legend:nth-child(1) {
   /*  margin-top: em(-90px);*/
+  margin-top: 1.875em;
   margin-bottom: 0.3125em; }
+  @media (min-width: 768px) {
+    #settingsFieldset1 > legend:nth-child(1) {
+      margin-top: 0em; } }
 
 .switchSpans {
-  margin-left: 40%;
+  margin-left: 60%;
   margin-top: -2.5em; }
+  @media (min-width: 1024px) {
+    .switchSpans {
+      margin-left: 33%; } }
 
 #timezone {
   height: 3.75em;
@@ -1090,7 +1095,7 @@ header {
   /*margin-right: em(10px);*/ }
   @media (min-width: 768px) {
     #headerH1 {
-      margin-left: -0.9375em; } }
+      margin-left: 0.3125em; } }
 
 #headerH1Span {
   font-weight: 700; }
@@ -1101,7 +1106,10 @@ header {
     #headerNav {
       display: flex;
       -moz-display: flex;
-      margin-left: auto; } }
+      justify-content: space-around;
+      -webkit-justify-content: space-around;
+      margin-left: auto;
+      width: 16.25em; } }
 
 /*#bell{
   margin-left: em(20px);
