--- a/scss/base/_header.scss
+++ b/scss/base/_header.scss
@@ -49,7 +49,7 @@ header {
   margin-top: em(-5px);
     /*margin-right: em(10px);*/
   @include bp(tablet){
-    margin-left: em(-15px);
+    margin-left: em(5px);
   }
   @include bp(fullscreen){
 
@@ -64,7 +64,10 @@ header {
     margin-left: auto;
   @include bp(tablet){
     @include flex;
+    @include flex_justify_space_around;
     margin-left: auto;
+    width: em(260px);
+
   }
 }
 /*#bell{
